Opened 17 years ago

Closed 17 years ago

#1465 closed bug (fixed)

Assert in kernel/fs/vfs.cpp

Reported by: kaliber Owned by: axeld
Priority: critical Milestone: R1
Component: File Systems Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Before that crash there was about 4MB memory free and I was untaring a big file. I'm not sure if it is a real bug.

PANIC: ASSERT FAILED (src/system/kernel/fs/vfs.cpp:672): vnode->ref_count == 0 && vnode->busy

Welcome to Kernel Debugging Land...
Running on CPU 0
kdebug> bt
stack trace for thread 0x5 "low memory handler"
    kernel stack: 0x800e7000 to 0x800eb000
frame            caller     <image>:function + offset
800eadc4 (+  52) 8008ac40   <kernel>:invoke_command + 0x0074
800eadf8 (+  48) 8008ad5e   <kernel>:kernel_debugger_loop + 0x00de
800eae28 (+  32) 8008b7ea   <kernel>:kernel_debugger + 0x00b2
800eae48 (+ 192) 8008b72d   <kernel>:panic + 0x0029
800eaf08 (+  48) 800463b9   <kernel>:free_vnode__FP5vnodeb + 0x0031
800eaf38 (+  64) 80046871   <kernel>:vnode_low_memory_handler__FPvl + 0x00c5
800eaf78 (+  64) 8005f22e   <kernel>:call_handlers__Fl + 0x0072
800eafb8 (+  32) 8005f2c9   <kernel>:low_memory__FPv + 0x0031
800eafd8 (+  32) 8003b8c3   <kernel>:_create_kernel_thread_kentry__Fv + 0x001b
800eaff8 (+2146521096) 8003b858   <kernel>:thread_kthread_exit__Fv + 0x0000
kdebug>

Change History (2)

comment:1 by bonefish, 17 years ago

Priority: normalcritical

Seems like a vnode with reference count > 0 ended up in the unused vnodes list. That's not healthy.

comment:2 by bonefish, 17 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev22209.

Note: See TracTickets for help on using tickets.